--- a/about.html
+++ b/about.html
@@ -5,10 +5,16 @@ title: About
 
 <h2>About</h2>
 
-<p>
-这是测试
-</p>
 
-<p>
-Hey, 这是测试.
-</p>
+
+<div>
+    <div>
+        <a href="assets\images\banners\myblog.jpg"></a>
+    </div>
+
+    <div>
+        <h1>作者简介：</h1> 
+        <h2>Hey, 这是测试.</h2> 
+    </div>
+
+</div>
