--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ title: About
     </div>
 
     <div>
-        <h1>作者简介：</h1> 
+        <h1>作者简介：私人博客</h1> 
         <h2>Hey, 这是测试.</h2> 
     </div>
 
