--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@ title: About
     <div>
         <h1>作者简介：私人博客</h1> 
         <h2>Hey, 这是一个测试.</h2> 
+        <h2>Hey, 这是一个测试.</h2> 
     </div>
 
 </div>
